--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="DiagrammerGPT: Generating Open-Domain, Open-Platform Diagrams via LLM Planning">
-  <meta name="keywords" content="diagram,diagram generation,gpt,diagrammer,diagram gpt,diagrammer gpt,diagrammergpt">
+        content="Bifrost-1: Bridging Multimodal LLMs and Diffusion Models with Patch-level CLIP Latents">
+  <meta name="keywords" content="image generation,image understanding,image understanding and generation,MLLM,unified model,bifrost-1,bifrost,bifrost1">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>DiagrammerGPT (COLM 2024)</title>
 
@@ -47,14 +47,14 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">DiagrammerGPT: Generating Open-Domain,<br>Open-Platform Diagrams via LLM Planning</h1>
+          <h1 class="title is-1 publication-title">Bifrost-1: Bridging Multimodal LLMs and Diffusion Models with Patch-level CLIP Latents</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://aszala.com/">Abhay Zala</a>
-            </span>, &nbsp;  
+            </span>, &nbsp;
             <span class="author-block">
               <a href="https://hl-hanlin.github.io/">Han Lin</a>
-            </span>, &nbsp;  
+            </span>, &nbsp;
               <span class="author-block">
                 <a href="https://j-min.io">Jaemin Cho</a>
               </span>, &nbsp;
@@ -93,7 +93,7 @@
                   <span>Code</span>
                   </a>
               </span>
-              
+
               <!-- Code Link. -->
               <span class="link-block">
                 <a href="https://huggingface.co/datasets/abhayzala/AI2D-Caption"
@@ -453,7 +453,7 @@
 
         <br><br>
 
-        
+
         <h3 class="title is-4">Human-in-the-Loop Diagram Plan Editing</h3>
         <img src="./static/images/figure_9.png" alt="Teaser" width="80%">
         <div class="content has-text-justified">
