--- a/index.html
+++ b/index.html
@@ -403,7 +403,15 @@
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <pre><code>
-
+@misc{lin2025bifrost1bridgingmultimodalllms,
+      title={Bifrost-1: Bridging Multimodal LLMs and Diffusion Models with Patch-level CLIP Latents}, 
+      author={Han Lin and Jaemin Cho and Amir Zadeh and Chuan Li and Mohit Bansal},
+      year={2025},
+      eprint={2508.05954},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/2508.05954}, 
+}
     </code></pre>
   </div>
 </section>
