--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
               <!-- Model Link. -->
               <span class="link-block">
-                <a href="https://huggingface.co/hanlincs/Bifrost-1/tree/main"
+                <a href="https://huggingface.co/hanlincs/Bifrost-1"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <img style="max-width: 16px;" src="https://ctrl-adapter.github.io/static/hf_fa.ico" alt="Hugging Face">
