--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">Bifrost-1: Bridging Multimodal LLMs and Diffusion Models with Patch-level CLIP Latents</h1>
+          <h1 class="title is-1 publication-title">Bifrost-1: Bridging Multimodal LLMs and Diffusion Models with Patch-level CLIP Latents (NeurIPS 2025)</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://hl-hanlin.github.io/">Han Lin<sup>1</sup></a>
